cpp/prime-factors/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.015s
user	0m0.001s
sys	0m0.014s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
[ 25%] Building CXX object CMakeFiles/prime-factors.dir/prime_factors_test.cpp.o
[ 50%] Building CXX object CMakeFiles/prime-factors.dir/prime_factors.cpp.o
[ 75%] Building CXX object CMakeFiles/prime-factors.dir/test/tests-main.cpp.o
[100%] Linking CXX executable prime-factors
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
[100%] Built target prime-factors
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
===============================================================================
All tests passed (10 assertions in 10 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
[100%] Built target test_prime-factors
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/prime-factors.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/prime-factors.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)2169"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
prime_factors.cpp                             20      20   100%   
prime_factors_test.cpp                        50      50   100%   
test/catch.hpp                                48      27    56%   1448-1450,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        118      97    82%
------------------------------------------------------------------------------
lines: 82.2% (97 out of 118)
branches: 37.3% (84 out of 225)

real	0m10.124s
user	0m9.174s
sys	0m0.945s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.233s
user	0m0.142s
sys	0m0.093s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.224s
user	0m0.144s
sys	0m0.082s

===============================================================================

Running: clang-format-16 -style=file -i ./prime_factors.cpp ./prime_factors_test.cpp ./prime_factors.h

real	0m0.019s
user	0m0.012s
sys	0m0.006s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./prime_factors.cpp ./prime_factors_test.cpp ./prime_factors.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/prime_factors.h:6:10: fatal error: 'vector' file not found
#include <vector>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/prime_factors.h.

real	0m0.502s
user	0m0.464s
sys	0m0.038s


real	0m0.504s
user	0m0.464s
sys	0m0.040s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
6271 warnings generated.
41659 warnings generated.
41659 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/prime_factors.h.
Suppressed 41664 warnings (41659 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.074s
user	0m5.994s
sys	0m0.080s
Running: clang-tidy-16 ./prime_factors.cpp ./prime_factors_test.cpp ./prime_factors.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/prime-factors/prime_factors.h:6:10: error: 'vector' file not found [clang-diagnostic-error]
#include <vector>
         ^~~~~~~~


real	0m6.077s
user	0m5.997s
sys	0m0.080s

===============================================================================

